--- a/docker/Dockerfile.consumer
+++ b/docker/Dockerfile.consumer
@@ -2,7 +2,7 @@ FROM python:3.9
 
 LABEL maintainer="Rahul Kataria <rahulkataria3355@gmail.com>"
 
-RUN apt-get update && apt-get install -y default-jre
+# RUN apt-get update && apt-get install -y default-jre
 
 COPY ./requirements.txt /app/requirements.txt
 WORKDIR /app
