--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,5 +10,6 @@ RUN pip install -r requirements.txt
 COPY ./app /app
 
 EXPOSE 80
-
+# "-u" is an option for the Python interpreter,which stands for "unbuffered output".
+# It is used to disable the buffering of the standard output, which ensures that the output is immediately sent to the console.
 CMD ["python","-u", "producer.py"]
